--- a/Assignments/Feng_A09_Spatial.Rmd
+++ b/Assignments/Feng_A09_Spatial.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 9: Spatial Analysis"
-author: "Student Name"
+author: "Xueying Feng"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
