--- a/Lessons/17_DataScraping.Rmd
+++ b/Lessons/17_DataScraping.Rmd
@@ -141,34 +141,25 @@ Note: the fill aesthetic shows up gray for some states. Why?
 
 ```{r}
 
-ggplot(Estuary, aes(x = Estuaries.Assessed.percent, y = Estuaries.Impaired.percent, 
+ggplot(Estuary, aes(x = Estuaries.Assessed.percent, 
+                    y = Estuaries.Impaired.percent, 
                     fill = Estuaries.Impaired.percent.TMDL)) +
-  #
-  geom_point(shape = 21, size = 2, alpha = 0.8) 
-  #+ 
-  #
-  #scale_fill_viridis_c(option = "inferno", begin = 0.2, end = 0.9, direction = -1) +
-  # 
-  #geom_label_repel(aes(label = State), nudge_x = -5, nudge_y = -5, 
-  #                 size = 3, alpha = 0.8) +  
-  #
-  # labs(x = "% Estuaries Assessed (%)",
-  #      y = "% Estuaries Impaired (%)", 
-  #      fill = "% Impaired with TMDL")  
+  geom_point(shape = 21, size = 2, alpha = 0.8) + 
+  scale_fill_viridis_c(option = "inferno", begin = 0.2, end = 0.9, direction = -1) +
+  geom_label_repel(aes(label = State), nudge_x = -5, nudge_y = -5, size = 3, alpha = 0.8) +  
+  labs(x = "% Estuaries Assessed (%)", 
+       y = "% Estuaries Impaired (%)", 
+       fill = "% Impaired with TMDL")  
 
 ggplot(Estuary, aes(x = Estuaries.Assessed.mi2, y = Estuaries.Impaired.mi2, 
                     fill = Estuaries.Impaired.percent.TMDL)) +
-  geom_point(shape = 21, size = 2, alpha = 0.8) 
-  #+ 
-  #
-  # scale_fill_viridis_c(option = "inferno", begin = 0.2, end = 0.9, direction = -1) +
-  #
-  # geom_label_repel(data = subset(Estuary, State %in% c("Virginia", "Florida", "Louisiana", "Texas")), 
-  #            aes(label = State), nudge_x = -500, nudge_y = 200) +
-  #
-  # labs(x = expression("Estuary Area Assessed (mi"^"2"*")"),
-  #      y = expression("Estuary Area Impaired (mi"^"2"*")"), 
-  #      fill = "% Impaired with TMDL")
+  geom_point(shape = 21, size = 2, alpha = 0.8) +
+  scale_fill_viridis_c(option = "inferno", begin = 0.2, end = 0.9, direction = -1) +
+  geom_label_repel(data = subset(Estuary, State %in% c("Virginia", "Florida", "Louisiana", "Texas")),
+                   aes(label = State), nudge_x = -500, nudge_y = 200) +
+  labs(x = expression("Estuary Area Assessed (mi"^"2"*")"),
+       y = expression("Estuary Area Impaired (mi"^"2"*")"), 
+       fill = "% Impaired with TMDL")
 
 
 ```
